--- a/GameData/000_FilterExtensions_Configs/Default/StockCategories.cfg
+++ b/GameData/000_FilterExtensions_Configs/Default/StockCategories.cfg
@@ -30,31 +30,38 @@ CATEGORY
 		list = 6,OPT Juno [2.9 x 5.0 m]
 		list = 7,OPT Kraken [3.2 x 8.0 m]
 		list = 8,OPT Humpback [4.0 x 8.3 m]
-		list = 9,Size 00 [0.35 m]
-		list = 10,Size 0 [0.625 m]
-		list = 11,Wedge [0.6 x 0.9 m]
-		list = 12,Size 1 [1.25 m]
-		list = 13,Mk 1x0.5 BoxBase [0.625 x 1.25 m]
-		list = 14,Mk 1x1 BoxBase [1.25 x 1.25 m]
-		list = 15,Size 1.5 [1.875 m]
-		list = 16,Size 2 [2.5 m]
-		list = 17,Planetary Base [1.4 x 2.5 m]
-		list = 18,Hex Truss [2.5 m]
-		list = 19,Modular Octo-Girder [2.5 m]
-		list = 20,Mk 2.5 Flat-Bottom [2.5m]
-		list = 21,Size 3 [3.75 m]
-		list = 22,Size 3 Octagonal [3.75 m]
-		list = 23,Exploration Rover System [2.2 x 3.1 m]
-		list = 24,Size 4 [5 m]
-		list = 25,Square 4 [6.5 m]
-		list = 26,Size 5 [7.5 m]
-		list = 27,HX [7+ m]
-		list = 28,Size 6 [10 m]
-		list = 29,Size 7 [15 m]
-		list = 30,Size 8 [20 m]
-		list = 31,Size 9 [30 m]
-		list = 32,Procedural
-		list = 33,Surface Attach
+		list = 9,Size 000 [0.125 m]
+		list = 10,Size 00 [0.35 m]
+		list = 11,Size 0 [0.625 m]
+		list = 12,Wedge [0.6 x 0.9 m]
+		list = 13,Size 0.5 [0.9375 m]
+		list = 14,Size 1 [1.25 m]
+		list = 15,X-20 Moroz [1 x 1.2 m]
+		list = 16,Mk 1x0.5 BoxBase [0.625 x 1.25 m]
+		list = 17,Mk 1x1 BoxBase [1.25 x 1.25 m]
+		list = 18,Size 1.2 [1.25 m]
+		list = 19,Size 1.5 [1.875 m]
+		list = 20,Size 1.8 [2.25 m]
+		list = 21,Size 2 [2.5 m]
+		list = 22,Planetary Base [1.4 x 2.5 m]
+		list = 23,Hex Truss [2.5 m]
+		list = 24,Modular Octo-Girder [2.5 m]
+		list = 25,Mk 2.5 Flat-Bottom [2.5m]
+		list = 26,Size 2.5 [3.125 m]
+		list = 27,Size 3 [3.75 m]
+		list = 28,Size 3 Octagonal [3.75 m]
+		list = 29,Exploration Rover System [2.2 x 3.1 m]
+		list = 30,Size 3.4 [4.25 m]
+		list = 31,Size 4 [5 m]
+		list = 32,Square 4 [6.5 m]
+		list = 33,Size 6 [7.5 m]
+		list = 34,HX [7+ m]
+		list = 35,Size 8 [10 m]
+		list = 36,Size 12 [15 m]
+		list = 37,Size 16 [20 m]
+		list = 38,Size 24 [30 m]
+		list = 39,Procedural
+		list = 40,Surface Attach
 	}
 }
 
