--- a/GameData/000_FilterExtensions_Configs/Default/Mod_Tantares.cfg
+++ b/GameData/000_FilterExtensions_Configs/Default/Mod_Tantares.cfg
@@ -1,4 +1,4 @@
-CATEGORY:NEEDS[Tantares,!TantaresLV,!Eisenhower-Astronautics]
+CATEGORY:NEEDS[Tantares,!TantaresLV,!TantaresSAF,!TantaresSP,!Eisenhower-Astronautics]
 {
 	name = Tantares Space Technologies
 	icon = Tantares
@@ -34,7 +34,7 @@ CATEGORY:NEEDS[Tantares,!TantaresLV,!Eisenhower-Astronautics]
 	}
 }
 
-CATEGORY:NEEDS[!Tantares,TantaresLV,!Eisenhower-Astronautics]
+CATEGORY:NEEDS[!Tantares,TantaresLV,!TantaresSAF,!TantaresSP,!Eisenhower-Astronautics]
 {
 	name = Tantares Space Technologies
 	icon = Tantares
@@ -70,7 +70,79 @@ CATEGORY:NEEDS[!Tantares,TantaresLV,!Eisenhower-Astronautics]
 	}
 }
 
-CATEGORY:NEEDS[Tantares,TantaresLV,!Eisenhower-Astronautics]
+CATEGORY:NEEDS[!Tantares,!TantaresLV,TantaresSAF,!TantaresSP,!Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = TantaresSAF
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	}
+}
+
+CATEGORY:NEEDS[!Tantares,!TantaresLV,!TantaresSAF,TantaresSP,!Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = TantaresSP
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	}
+}
+
+CATEGORY:NEEDS[Tantares,TantaresLV,!TantaresSAF,!TantaresSP,!Eisenhower-Astronautics]
 {
 	name = Tantares Space Technologies
 	icon = Tantares
@@ -106,7 +178,79 @@ CATEGORY:NEEDS[Tantares,TantaresLV,!Eisenhower-Astronautics]
 	}
 }
 
-CATEGORY:NEEDS[Tantares,!TantaresLV,Eisenhower-Astronautics]
+CATEGORY:NEEDS[Tantares,!TantaresLV,TantaresSAF,!TantaresSP,!Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = Tantares,TantaresSAF
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	}
+}
+
+CATEGORY:NEEDS[Tantares,!TantaresLV,!TantaresSAF,TantaresSP,!Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = Tantares,TantaresSP
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	}
+}
+
+CATEGORY:NEEDS[Tantares,!TantaresLV,!TantaresSAF,!TantaresSP,Eisenhower-Astronautics]
 {
 	name = Tantares Space Technologies
 	icon = Tantares
@@ -142,7 +286,78 @@ CATEGORY:NEEDS[Tantares,!TantaresLV,Eisenhower-Astronautics]
 	}
 }
 
-CATEGORY:NEEDS[!Tantares,TantaresLV,Eisenhower-Astronautics]
+CATEGORY:NEEDS[!Tantares,TantaresLV,TantaresSAF,!TantaresSP,!Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = TantaresLV,TantaresSAF
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	}
+}
+
+CATEGORY:NEEDS[!Tantares,TantaresLV,!TantaresSAF,TantaresSP,!Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = TantaresLV,TantaresSP
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	
+
+CATEGORY:NEEDS[!Tantares,TantaresLV,!TantaresSAF,!TantaresSP,Eisenhower-Astronautics]
 {
 	name = Tantares Space Technologies
 	icon = Tantares
@@ -178,7 +393,187 @@ CATEGORY:NEEDS[!Tantares,TantaresLV,Eisenhower-Astronautics]
 	}
 }
 
-CATEGORY:NEEDS[Tantares,TantaresLV,Eisenhower-Astronautics]
+CATEGORY:NEEDS[!Tantares,!TantaresLV,TantaresSAF,TantaresSP,!Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = TantaresSAF,TantaresSP
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	}
+}
+
+CATEGORY:NEEDS[!Tantares,!TantaresLV,TantaresSAF,!TantaresSP,Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = TantaresSAF,Eisenhower-Astronautics
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	}
+}
+
+CATEGORY:NEEDS[!Tantares,!TantaresLV,!TantaresSAF,TantaresSP,Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = TantaresSP,Eisenhower-Astronautics
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	}
+}
+
+CATEGORY:NEEDS[Tantares,TantaresLV,TantaresSAF,!TantaresSP,!Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = Tantares,TantaresLV,TantaresSAF
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	}
+}
+
+CATEGORY:NEEDS[Tantares,TantaresLV,!TantaresSAF,TantaresSP,!Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = Tantares,TantaresLV,TantaresSP
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	}
+}
+
+CATEGORY:NEEDS[Tantares,TantaresLV,!TantaresSAF,!TantaresSP,Eisenhower-Astronautics]
 {
 	name = Tantares Space Technologies
 	icon = Tantares
@@ -191,6 +586,474 @@ CATEGORY:NEEDS[Tantares,TantaresLV,Eisenhower-Astronautics]
 		{
 			type = folder
 			value = Tantares,TantaresLV,Eisenhower-Astronautics
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	}
+}
+
+CATEGORY:NEEDS[Tantares,!TantaresLV,TantaresSAF,TantaresSP,!Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = Tantares,TantaresSAF,TantaresSP
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	}
+}
+
+CATEGORY:NEEDS[Tantares,!TantaresLV,TantaresSAF,!TantaresSP,Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = Tantares,TantaresSAF,Eisenhower-Astronautics
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	}
+}
+
+CATEGORY:NEEDS[Tantares,!TantaresLV,!TantaresSAF,TantaresSP,Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = Tantares,TantaresSP,Eisenhower-Astronautics
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	}
+}
+
+CATEGORY:NEEDS[!Tantares,TantaresLV,TantaresSAF,TantaresSP,!Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = TantaresLV,TantaresSAF,TantaresSP
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	}
+}
+
+CATEGORY:NEEDS[!Tantares,TantaresLV,TantaresSAF,!TantaresSP,Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = TantaresLV,TantaresSAF,Eisenhower-Astronautics
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	}
+}
+
+CATEGORY:NEEDS[!Tantares,TantaresLV,!TantaresSAF,TantaresSP,Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = TantaresLV,TantaresSP,Eisenhower-Astronautics
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	}
+}
+
+CATEGORY:NEEDS[!Tantares,!TantaresLV,TantaresSAF,TantaresSP,Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = TantaresSAF,TantaresSP,Eisenhower-Astronautics
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	}
+}
+
+CATEGORY:NEEDS[Tantares,TantaresLV,TantaresSAF,TantaresSP,!Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = Tantares,TantaresLV,TantaresSAF,TantaresSP
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	}
+}
+
+CATEGORY:NEEDS[Tantares,TantaresLV,TantaresSAF,!TantaresSP,Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = Tantares,TantaresLV,TantaresSAF,Eisenhower-Astronautics
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	}
+}
+
+CATEGORY:NEEDS[Tantares,TantaresLV,!TantaresSAF,TantaresSP,Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = Tantares,TantaresLV,TantaresSP,Eisenhower-Astronautics
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	}
+}
+
+CATEGORY:NEEDS[Tantares,!TantaresLV,TantaresSAF,TantaresSP,Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = Tantares,TantaresSAF,TantaresSP,Eisenhower-Astronautics
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	}
+}
+
+CATEGORY:NEEDS[!Tantares,TantaresLV,TantaresSAF,TantaresSP,Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = TantaresLV,TantaresSAF,TantaresSP,Eisenhower-Astronautics
+		}
+	}
+	
+	SUBCATEGORIES
+	{
+		list = 0,Pods
+		list = 1,Fuel Tanks
+		list = 2,Engines
+		list = 3,Command and Control
+		list = 4,Structural
+		list = 5,Coupling
+		list = 6,Payload
+		list = 7,Aerodynamics
+		list = 8,Ground
+		list = 9,Thermal
+		list = 10,Electrical
+		list = 11,Communications
+		list = 12,Science
+		list = 13,Utility
+		list = 14,Undefined
+	}
+}
+
+CATEGORY:NEEDS[Tantares,TantaresLV,TantaresSAF,TantaresSP,Eisenhower-Astronautics]
+{
+	name = Tantares Space Technologies
+	icon = Tantares
+	colour = #FFF0F0F0
+	all = true
+	
+	FILTER
+	{
+		CHECK
+		{
+			type = folder
+			value = Tantares,TantaresLV,TantaresSAF,TantaresSP,Eisenhower-Astronautics
 		}
 	}
 	
